Update all files with movie option and own APP_ID

--- a/helloChromecast.html
+++ b/helloChromecast.html
@@ -17,6 +17,7 @@
            <option value='http://commondatastorage.googleapis.com/gtv-videos-bucket/tears_of_steel_1080p.mov'>Tears of Steel MOV</option>
            <option value='http://commondatastorage.googleapis.com/gtv-videos-bucket/reel_2012_1280x720.mp4'>Reel MP4</option>
            <option value='http://commondatastorage.googleapis.com/gtv-videos-bucket/Google%20IO%202011%2045%20Min%20Walk%20Out.mp3'>Google I/O 2011 MP3</option>
+           <option value='http://192.168.1.106:8080/Users/Varun/Videos/Cloud%20Atlas%20(2012)/Cloud%20Atlas%20(2012).mp4'>Cloud Atlas (2012)</option>
         </select>
       </div>
       <video id="video" controls width="468" src="http://commondatastorage.googleapis.com/gtv-videos-bucket/big_buck_bunny_1080p.mp4"></video>
