--- a/helloWorld.html
+++ b/helloWorld.html
@@ -22,6 +22,7 @@
            <input type="radio" name="media" onclick="selectMedia(2);">Tears of Steel MOV<br>
            <input type="radio" name="media" onclick="selectMedia(3);">Reel MP4<br>
            <input type="radio" name="media" onclick="selectMedia(4);">Google I/O 2011 MP3<br>
+           <input type="radio" name="media" onclick="selectMedia(5);">Cloud Atlas (2012)<br>
       </div>
 
     </div>
