--- a/receiver.html
+++ b/receiver.html
@@ -8,7 +8,7 @@
 
 cast.receiver.logger.setLevelValue(0);
 var receiver = new cast.receiver.Receiver(
-    'YOUR_APP_ID', [cast.receiver.RemoteMedia.NAMESPACE],
+    'f0864f49-db66-47c8-aab5-877ffc60bb70_3', [cast.receiver.RemoteMedia.NAMESPACE],
     "",
     5);
 var remoteMedia = new cast.receiver.RemoteMedia();
